fix(macos): Hide vscrollbar on macOS

--- a/styles/material-dark-mod.less
+++ b/styles/material-dark-mod.less
@@ -196,9 +196,10 @@ http://ethanschoonover.com/solarized
   .CodeMirror .CodeMirror-linewidget img.inline-widget {
     background: rgba(255,255,255,0.05);
   }
+}
 
+body:not(.platform-darwin) .editor {
   .CodeMirror-vscrollbar {
     background: @base01
   }
-
 }
